cli-aks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: streamlit-example
 labels:
   app: streamlit
spec:
 selector:
   matchLabels:
     app: streamlit
 template:
   metadata:
     labels:
       app: streamlit
   spec:
     containers:
     - name: streamlit-app
       image: streamlit.azurecr.io/streamlit-example:1
       ports:
       - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
 name: streamlit-example-service
 labels:
   app: streamlit
spec:
 type: ClusterIP
 selector:
   app: streamlit
 ports:
 - port: 8501
