cli-aks/ingress-with-auth.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: streamlit-example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - example.streamlit.io
    secretName: tls-secret
  rules:
  - host: example.streamlit.io
    http:
      paths:
      - backend:
          serviceName: streamlit-example-service
          servicePort: 8501
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - example.streamlit.io
    secretName: tls-secret
  rules:
  - host: example.streamlit.io
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy-service
          servicePort: 4180
        path: /oauth2
