cli-aks/ingress-with-tls-certificate.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: streamlit-example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - example.streamlit.io
    secretName: tls-secret
  rules:
  - host: example.streamlit.io
    http:
      paths:
      - backend:
          serviceName: streamlit-example-service
          servicePort: 8501
        path: /
