cli-aks/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: streamlit-example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: example.streamlit.io
    http:
      paths:
      - backend:
          serviceName: streamlit-example-service
          servicePort: 8501
        path: /
